--- a/src/pages/Category/Category.module.scss
+++ b/src/pages/Category/Category.module.scss
@@ -117,6 +117,11 @@
   background: $white;
   padding-top: 8px;
   padding-bottom: 8px;
+
+  @media (max-width: 768px) {
+    width: 100%;
+    min-width: 0;
+  }
 }
 
 .imageSlider {
